pegasus/src/Pegasus/Compiler/tests/invalidMOF/badQualifierDecl16.mof
/* Extra Comma in Scope, Syntax Error */
Qualifier Abstract : boolean = false, 
    Scope(class, association, indication, ), 
    Flavor(EnableOverride,Restricted);
